setup/manifests/flannel.yaml
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: flannel
  namespace: kube-system
  labels:
    app: kubernetes
    component: flannel
spec:
  template:
    metadata:
      labels:
        app: kubernetes
        component: flannel
    spec:
      hostNetwork: true
      containers:
        - name: kube-flannel
          image: quay.io/coreos/flannel-git:latest
          command:
            - /opt/bin/flanneld
            - --ip-masq
            - --kube-subnet-mgr
          securityContext:
            privileged: true
          volumeMounts:
            - name: run
              mountPath: /run
            - name: flannel-cfg
              mountPath: /etc/kube-flannel/
        - name: install-cni
          image: busybox
          command:
            - /bin/sh
            - -c
            - set -e -x;
              TMP=/etc/cni/net.d/.tmp-flannel-cfg;
              cp /etc/kube-flannel/cni-conf.json ${TMP};
              mv ${TMP} /etc/cni/net.d/10-flannel.conf;
              while :; do sleep 3600; done
          volumeMounts:
            - name: cni
              mountPath: /etc/cni/net.d
            - name: flannel-cfg
              mountPath: /etc/kube-flannel/
      volumes:
        - name: run
          hostPath:
            path: /run
        - name: cni
          hostPath:
            path: /etc/cni/net.d
        - name: flannel-cfg
          configMap:
            name: kube-flannel-cfg
