setup/manifests/kube-ingress-acme.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: kube-lego
  namespace: kube-system
  labels:
    app: kube-ingress
    component: acme
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kube-ingress
        component: acme
    spec:
      containers:
      - name: kube-lego
        image: jetstack/kube-lego:0.1.2
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 1
