setup/manifests/kube-pvt-ingress-dns.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: kube-pvt-ingress-dns
  namespace: kube-system
  labels:
    app: kube-pvt-ingress
    component: dns
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kube-pvt-ingress
        component: dns
    spec:
      containers:
        - name: vault-sidekick
          image: quay.io/roboll/vault-sidekick:v0.0.9.11
          args:
            - -logtostderr=true
            - -tls-skip-verify=true
            - -output=/etc/secrets
            - -cn=aws:${dns_path}:fmt=awsenv,file=aws.env
          volumeMounts:
            - mountPath: /etc/secrets
              name: secrets
        - name: dns-controller
          image: quay.io/roboll/kube-dns-controller:v0.0.2
          command:
            - /bin/sh
            - -c
            - sleep 30 &&
              source /etc/secrets/aws.env &&
              export AWS_SECRET_ACCESS_KEY &&
              export AWS_ACCESS_KEY_ID &&
              exec /dns-controller --publish-service=kube-system/kube-pvt-ingress-nginx
          volumeMounts:
            - mountPath: /etc/secrets
              name: secrets
              readOnly: true
      volumes:
        - name: secrets
          emptyDir: {}
