setup/manifests/kube-controller-metrics.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: kube-controller-manager
  namespace: kube-system
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "10252"
  labels:
    name: kube-controller-manager
spec:
  selector:
    app: kubernetes
    component: controller-manager
  ports:
  - name: metrics
    port: 10252
    protocol: TCP

---
kind: Service
apiVersion: v1
metadata:
  name: kube-apiserver
  namespace: kube-system
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/scheme: "https"
  labels:
    name: kube-apiserver
spec:
  selector:
    app: kubernetes
    component: apiserver
  ports:
  - name: metrics
    port: 443
    protocol: TCP
