setup/manifests/kube-controller.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: kube-controller-manager
  namespace: kube-system
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "10252"
  labels:
    name: kube-controller-manager
spec:
  selector:
    app: kubernetes
    component: controller-manager
  ports:
  - name: metrics
    port: 10252
    protocol: TCP

---
kind: Service
apiVersion: v1
metadata:
  name: kube-apiserver
  namespace: kube-system
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/scheme: "https"
  labels:
    name: kube-apiserver
spec:
  selector:
    app: kubernetes
    component: apiserver
  ports:
  - name: metrics
    port: 443
    protocol: TCP

---
kind: Service
apiVersion: v1
metadata:
  name: kube-flannel-server
  namespace: kube-system
  annotations:
    prometheus.io/probe: "true"
    prometheus.io/port: "10259"
  labels:
    name: kube-flannel-server
spec:
  selector:
    app: kubernetes
    component: flannel-server
  ports:
  - name: metrics
    port: 10259
    protocol: TCP

---
kind: Service
apiVersion: v1
metadata:
  name: kube-etcd
  namespace: kube-system
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "2381"
  labels:
    app: kubernetes
    component: etcd
spec:
  selector:
    app: kubernetes
    component: etcd
  ports:
  - name: metrics
    port: 2381
    protocol: TCP

---
kind: DaemonSet
apiVersion: extensions/v1beta1
metadata:
  name: kube-etcd-metrics
  namespace: kube-system
  labels:
    app: kubernetes
    component: etcd-metrics
spec:
  template:
    metadata:
      labels:
        app: kubernetes
        component: etcd-metrics
    spec:
      nodeSelector:
        role: controller
      hostNetwork: true
      containers:
        - name: kube-etcd
          image: quay.io/roboll/etcd-metrics-proxy:v0.5
          args:
            - --upstream-server-name=controller
            - --etcd-ca=/etc/secrets/etcd.ca
            - --etcd-cert=/etc/secrets/etcd.crt
            - --etcd-key=/etc/secrets/etcd.key
          resources:
            requests:
              cpu: 5m
              memory: 50Mi
          volumeMounts:
            - mountPath: /etc/secrets
              name: secrets
              readOnly: true
        - name: vault-sidekick
          image: quay.io/roboll/vault-sidekick:v0.0.9.4
          args:
            - -logtostderr=true
            - -output=/etc/secrets
            - -cn=pki:${etcd_pki_backend}:common_name=metrics,fmt=cert,file=etcd
          volumeMounts:
            - mountPath: /etc/secrets
              name: secrets
            - mountPath: /etc/vault
              name: vault
      volumes:
        - name: secrets
          emptyDir: {}
        - name: vault
          configMap:
            name: vault
