setup/manifests/kube-etcd-metrics.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: kube-etcd
  namespace: kube-system
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "2381"
  labels:
    app: kubernetes
    component: etcd
spec:
  selector:
    app: kubernetes
    component: etcd
  ports:
  - name: metrics
    port: 2381
    protocol: TCP

---
kind: DaemonSet
apiVersion: extensions/v1beta1
metadata:
  name: kube-etcd-metrics
  namespace: kube-system
  labels:
    app: kubernetes
    component: etcd-metrics
spec:
  template:
    metadata:
      labels:
        app: kubernetes
        component: etcd-metrics
    spec:
      nodeSelector:
        role: controller
      hostNetwork: true
      containers:
        - name: kube-etcd
          image: quay.io/roboll/etcd-metrics-proxy:v0.5
          args:
            - --upstream-server-name=controller
            - --etcd-ca=/etc/secrets/etcd.ca
            - --etcd-cert=/etc/secrets/etcd.crt
            - --etcd-key=/etc/secrets/etcd.key
          resources:
            requests:
              cpu: 5m
              memory: 50Mi
          volumeMounts:
            - mountPath: /etc/secrets
              name: secrets
              readOnly: true
        - name: vault-sidekick
          image: quay.io/roboll/vault-sidekick:test
          args:
            - -logtostderr=true
            - -tls-skip-verify=true
            - -output=/etc/secrets
            - -cn=pki:${etcd_pki}:common_name=metrics,fmt=cert,file=etcd
          volumeMounts:
            - mountPath: /etc/secrets
              name: secrets
            - mountPath: /etc/vault
              name: vault
      volumes:
        - name: secrets
          emptyDir: {}
        - name: vault
          secret:
            secretName: vault
