setup/manifests/kube-ingress-nginx.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: kube-ingress-nginx-default
  namespace: kube-system
  labels:
    app: kube-ingress-nginx
    component: default-backend
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: kube-ingress-nginx
    component: default-backend

---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: kube-ingress-nginx-default
  namespace: kube-system
  labels:
    app: kube-ingress-nginx
    component: default-backend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kube-ingress-nginx
        component: default-backend
    spec:
      containers:
      - name: default-http-backend
        image: gcr.io/google_containers/defaultbackend:1.0
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 10m
            memory: 20Mi
          requests:
            cpu: 10m
            memory: 20Mi

---
kind: Service
apiVersion: v1
metadata:
  name: kube-ingress-nginx
  namespace: kube-system
  labels:
    app: kube-ingress-nginx
    component: nginx
spec:
  type: LoadBalancer
  selector:
    app: kube-ingress-nginx
    component: nginx
  ports:
    - port: 80
      name: http
    - port: 443
      name: https

---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: kube-ingress-nginx
  namespace: kube-system
  labels:
    app: kube-ingress-nginx
    component: nginx
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kube-ingress-nginx
        component: nginx
    spec:
      containers:
        - name: nginx
          image: gcr.io/google_containers/nginx-ingress-controller:0.8.3
          livenessProbe:
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 5
          ports:
            - containerPort: 80
            - containerPort: 443
          args:
            - /nginx-ingress-controller
            - --default-backend-service=$(POD_NAMESPACE)/kube-ingress-nginx-default
            - --nginx-configmap=$(POD_NAMESPACE)/kube-ingress-nginx
