setup/manifests/kube-ingress-traefik.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: kube-ingress-traefik
  namespace: kube-system
  labels:
    app: kube-ingress-traefik
    component: traefik
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kube-ingress-traefik
        component: traefik
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - image: traefik:v1.0.0
          name: traefik-ingress-lb
          resources:
            limits:
              cpu: 200m
              memory: 30Mi
            requests:
              cpu: 100m
              memory: 20Mi
          ports:
            - containerPort: 80
            - containerPort: 8080
          args:
            - --web
            - --kubernetes

---
kind: Service
apiVersion: v1
metadata:
  name: kube-ingress-traefik
  namespace: kube-system
  labels:
    app: kube-ingress-traefik
    component: traefik
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-internal: 0.0.0.0/0
spec:
  type: LoadBalancer
  selector:
    app: kube-ingress-traefik
    component: traefik
  ports:
    - port: 80
      name: http

---
kind: Service
apiVersion: v1
metadata:
  name: kube-ingress-traefik-ui
  namespace: kube-system
spec:
  selector:
    app: kube-ingress-traefik
    component: traefik-ui
  ports:
    - port: 80
      name: ui
