setup/manifests/kube-pvt-ingress.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: kube-pvt-ingress-default
  namespace: kube-system
  labels:
    app: kube-ingress
    component: default-backend
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: kube-pvt-ingress
    component: default-backend

---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: kube-pvt-ingress-default
  namespace: kube-system
  labels:
    app: kube-pvt-ingress
    component: default-backend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kube-pvt-ingress
        component: default-backend
    spec:
      containers:
      - name: default-http-backend
        image: gcr.io/google_containers/defaultbackend:1.0
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 10m
            memory: 20Mi
          requests:
            cpu: 10m
            memory: 20Mi

---
kind: Service
apiVersion: v1
metadata:
  name: kube-pvt-ingress-nginx
  namespace: kube-system
  labels:
    app: kube-ingress
    component: nginx
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-internal: 0.0.0.0/0
spec:
  type: LoadBalancer
  ports:
  - port: 80
    name: http
  - port: 443
    name: https
  selector:
    app: kube-pvt-ingress
    component: nginx

---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: kube-pvt-ingress-nginx
  namespace: kube-system
  labels:
    app: kube-pvt-ingress
    component: nginx
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kube-pvt-ingress
        component: nginx
    spec:
      containers:
        - name: nginx
          image: gcr.io/google_containers/nginx-ingress-controller:0.8.3
          livenessProbe:
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 5
          ports:
            - containerPort: 80
            - containerPort: 443
          args:
            - /nginx-ingress-controller
            - --default-backend-service=kube-system/kube-pvt-ingress-default
            - --nginx-configmap=kube-system/kube-ingress-nginx
            - --watch-namespace=kube-system
