setup/manifests/kube-dashboard.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: kube-dashboard
  namespace: kube-system
  labels:
    app: kubernetes
    component: dashboard
spec:
  ports:
  - port: 80
    targetPort: 9090
  selector:
    app: kubernetes
    component: dashboard

---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: kube-dashboard
  namespace: kube-system
  labels:
    app: kubernetes
    component: dashboard
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kubernetes
        component: dashboard
    spec:
      containers:
      - name: kubernetes-dashboard
        image: gcr.io/google_containers/kubernetes-dashboard-amd64:v1.4.0
        ports:
        - containerPort: 9090
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 9090
          initialDelaySeconds: 30
          timeoutSeconds: 30

---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: kube-dashboard
  namespace: kube-system
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "private"
spec:
  #  tls:
  #  - hosts:
  #    - tools.${domain}
  #    secretName: dashboard-acme-tls
  rules:
  - host: tools.${domain}
    http:
      paths:
        - path: /dashboard/
          backend:
            serviceName: kube-dashboard
            servicePort: 80
