setup/manifests/logging.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: es-discovery
  namespace: logs
  labels:
    app: logging
    component: elasticsearch
    role: master
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9108"
spec:
  selector:
    app: logging
    component: elasticsearch
    role: master
  ports:
  - name: transport
    port: 9300
    protocol: TCP

---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: es-master
  namespace: logs
  labels:
    app: logging
    component: elasticsearch
    role: master
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: logging
        component: elasticsearch
        role: master
    spec:
      containers:
      - name: es-master
        securityContext:
          privileged: true
          capabilities:
            add:
              - IPC_LOCK
        image: quay.io/pires/docker-elasticsearch-kubernetes:2.4.0
        ports:
        - containerPort: 9300
          name: transport
          protocol: TCP
        volumeMounts:
        - mountPath: /data
          name: storage
      - name: es-metrics
        image: quay.io/roboll/elasticsearch-metrics:v0.3.0
        ports:
          - containerPort: 9108
            name: metrics
            protocol: TCP
      volumes:
      - name: storage
        emptyDir: {}

---
kind: Service
apiVersion: v1
metadata:
  name: elasticsearch
  namespace: logs
  labels:
    app: logging
    component: elasticsearch
    role: client
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9108"
spec:
  selector:
    app: logging
    component: elasticsearch
    role: client
  ports:
  - name: http
    port: 9200
    protocol: TCP

---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: es-client
  namespace: logs
  labels:
    app: logging
    component: elasticsearch
    role: client
spec:
  replicas: 1
  template:
    metadata:
      namespace: logs
      labels:
        app: logging
        component: elasticsearch
        role: client
    spec:
      containers:
      - name: es-client
        securityContext:
          privileged: true
          capabilities:
            add:
              - IPC_LOCK
        image: quay.io/pires/docker-elasticsearch-kubernetes:2.4.0
        ports:
        - containerPort: 9200
          name: http
          protocol: TCP
        - containerPort: 9300
          name: transport
          protocol: TCP
        volumeMounts:
        - mountPath: /data
          name: storage
      - name: es-metrics
        image: quay.io/roboll/elasticsearch-metrics:v0.3.0
        ports:
          - containerPort: 9108
            name: metrics
            protocol: TCP
      volumes:
      - name: storage
        emptyDir: {}

---
kind: DaemonSet
apiVersion: extensions/v1beta1
metadata:
  name: logging-fluentd
  namespace: logs
  labels:
    app: logging
    component: fluentd
spec:
  template:
    metadata:
      name: logging-fluentd
      labels:
        app: logging
        component: fluentd
    spec:
      containers:
        - name: fluentd-elasticsearch
          image: quay.io/roboll/fluentd-kube:v0.6
          resources:
            limits:
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 200Mi
          volumeMounts:
            - name: varlog
              mountPath: /var/log
            - name: docker
              mountPath: /var/lib/docker/containers
      terminationGracePeriodSeconds: 30
      volumes:
        - name: varlog
          hostPath:
            path: /var/log
        - name: docker
          hostPath:
            path: /var/lib/docker/containers

---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: logging-kibana
  namespace: logs
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "traefik"
spec:
  #  tls:
  #  - hosts:
  #    - kibana.${domain}
  #    secretName: logging-kibana-acme-tls
  rules:
    - host: tools.${domain}
      http:
        paths:
          - path: /kibana/
            backend:
              serviceName: kibana
              servicePort: 80

---
kind: Service
apiVersion: v1
metadata:
  name: logging-kibana
  namespace: logs
  labels:
    app: logging
    component: kibana
spec:
  ports:
    - name: ui
      port: 80
      targetPort: ui
  selector:
    app: logging
    component: kibana

---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: logging-kibana
  namespace: logs
  labels:
    app: logging
    component: kibana
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: logging
        component: kibana
    spec:
      containers:
        - name: kibana
          image: kibana:4.6
          args:
            - --config /etc/kibana/kibana.yml
            - --elasticsearch=http://elasticsearch:9200
          ports:
            - containerPort: 5601
              name: ui
          volumeMounts:
            - name: config
              mountPath: /etc/kibana/
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: logging-kibana
