setup/manifests/metrics.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: metrics-node-exporter
  namespace: kube-system
  annotations:
    prometheus.io/scrape: "true"
  labels:
    app: metrics
    component: prom-node-exporter
spec:
  ports:
  - name: scrape
    port: 9100
    protocol: TCP
  selector:
    app: metrics
    component: prom-node-exporter

---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: metrics-node-exporter
  namespace: kube-system
spec:
  template:
    metadata:
      name: metrics-node-exporter
      namespace: kube-system
      labels:
        app: metrics
        component: prom-node-exporter
    spec:
      containers:
      - image: prom/node-exporter:0.12.0
        name: node-exporter
        ports:
        - containerPort: 9100
          hostPort: 9100
          name: scrape
      hostNetwork: true
      hostPID: true

---
apiVersion: v1
kind: Service
metadata:
  name: metrics-blackbox
  namespace: kube-system
  labels:
    app: metrics
    component: blackbox
spec:
  selector:
    app: metrics
    component: blackbox
  ports:
  - protocol: TCP
    targetPort: 9115
    port: 80

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: metrics-blackbox
  namespace: kube-system
  labels:
    app: metrics
    component: blackbox
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: metrics
        component: blackbox
    spec:
      containers:
      - name: blackbox
        image: prom/blackbox-exporter:v0.2.0
        ports:
        - containerPort: 9115
          protocol: TCP

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: metrics-alertmanager
  namespace: kube-system
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
      - tools.${fqdn}
      secretName: metrics-alertmanager-acme-tls
  rules:
  - host: tools.${fqdn}
    http:
      paths:
        - path: /alerts/
          backend:
            serviceName: metrics-alertmanager
            servicePort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: metrics-alertmanager
  namespace: kube-system
  labels:
    name: metrics-alertmanager
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/alerts/metrics"
spec:
  selector:
    app: metrics
    component: alertmanager
  ports:
  - protocol: TCP
    targetPort: 9093
    port: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: metrics-prometheus
  namespace: kube-system
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  #  tls:
  #  - hosts:
  #    - tools.${fqdn}
  #    secretName: metrics-prometheus-acme-tls
  rules:
  - host: tools.${fqdn}
    http:
      paths:
        - path: /prometheus/
          backend:
            serviceName: metrics-prometheus
            servicePort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: metrics-prometheus
  namespace: kube-system
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/prometheus/metrics"
  labels:
    name: metrics-prometheus
spec:
  selector:
    app: metrics
    component: prometheus
  ports:
  - protocol: TCP
    targetPort: 9090
    port: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: metrics-grafana
  namespace: kube-system
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  #  tls:
  #  - hosts:
  #    - tools.${fqdn}
  #    secretName: metrics-grafana-acme-tls
  rules:
  - host: tools.${fqdn}
    http:
      paths:
        - path: /grafana/
          backend:
            serviceName: metrics-grafana
            servicePort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: metrics-grafana
  namespace: kube-system
  labels:
    app: metrics
    component: grafana
spec:
  selector:
    app: metrics
    component: grafana
  ports:
  - protocol: TCP
    targetPort: 3000
    port: 80

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: metrics-grafana
  namespace: kube-system
  labels:
    app: metrics
    component: grafana
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: metrics
        component: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:3.1.0
          ports:
            - containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: storage
              mountPath: /data
      volumes:
        - name: storage
          emptyDir: {}
