setup/manifests/registry.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: registry
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "private"
spec:
  rules:
    - host: registry.${domain}
      http:
        paths:
          - path: /
            backend:
              serviceName: registry
              servicePort: 5000

---
kind: Service
apiVersion: v1
metadata:
  name: registry
  namespace: kube-system
  labels:
    app: registry
spec:
  selector:
    app: registry
  ports:
  - name: registry
    port: 5000

---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: registry
  namespace: kube-system
  labels:
    app: registry
    version: v0
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: registry
        version: v0
    spec:
      containers:
        - name: vault-sidekick
          image: quay.io/roboll/vault-sidekick:v0.0.9.11
          args:
            - -logtostderr=true
            - -tls-skip-verify=true
            - -output=/etc/secrets
            - -cn=aws:${registry_path}:fmt=awsenv,file=aws.env,export=true
            - -cn=secret:${http_secret}:fmt=env,file=http.env,export=true
            - -cn=pki:${cert_path}:fmt=cert,file=registry,common_name=registry.${domain},alt_names=registry|registry.kube-system.svc|registry.kube-system.svc.cluster.local
          volumeMounts:
            - mountPath: /etc/secrets
              name: secrets
        - name: registry
          image: registry:2
          command:
            - /bin/sh
            - -c
            - sleep 30 &&
              . /etc/secrets/aws.env &&
              . /etc/secrets/http.env &&
              exec registry serve /etc/docker/registry/config.yml
          resources:
            # keep request = limit to keep this container in guaranteed class
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
            - name: secrets
              mountPath: /etc/secrets
          ports:
            - containerPort: 5000
              name: registry
              protocol: TCP
      volumes:
        - name: secrets
          emptyDir: {}
